# forageHarvest

./: .clang-format  .gitignore  CMakeLists.txt  Cam.cpp  Cam.h  Detection.cpp  Detection.h  Handle.cpp  Handle.h  README.md  imageframe.cpp  imageframe.hpp  main.cpp
